Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faurecia-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: faurecia-app
        image: faurecia-app
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
