Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faurecia-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faurecia-app
                port:
                  number: 3000
          - path: /(.+)
            pathType: Prefix
            backend:
              service:
                name: faurecia-app
                port:
                  number: 3000
